fixed layout on screens that were too large

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3004,6 +3004,26 @@
 
 		}
 
+		@media screen and (min-width: 1280px) {
+
+			#banner {
+				padding: 7em 0 2em 0;
+			}
+
+				#banner .inner {
+					padding-top: .5em;
+				}
+
+				#banner h1 {
+					font-size: 3em;
+				}
+
+				#banner h3 {
+					font-size: 1.25em;
+				}
+
+		}
+		
 		@media screen and (max-width: 1280px) {
 
 			#banner {
